[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am mahsh your webapp and this is my first webap.
+            Hi! I am mahsh and this is my first webap.
+            <h1>welcome to new Web app</h1>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
