[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Article one 1 Mahesh
+            Article 2 Mahesh
         </title>
     </head>
     
@@ -11,7 +11,7 @@
         </div>
         <br/>
         <h3>
-            Article one
+            Article two
         </h3>
         <div>
             August 3,2017
