[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,6 +9,7 @@
               max-width : 800px;
               margin : 0 auto;
               font-family : consolas ;
+              color : grey ;
           }  
             
         </style>
