--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,10 +6,13 @@
         
         <style>
           .container{
-              max-width : 800px;
-              margin : 0 auto;
-              font-family : consolas ;
-              color : grey ;
+                max-width: 800px;
+                margin: 0 auto;
+                font-family: consolas;
+                color: #462424;
+                padding-top: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
           }  
             
         </style>
