--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,18 +3,21 @@
         <title>
             Article 2 Mahesh
         </title>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <br/>
-        <h3>
-            Article two
-        </h3>
-        <div>
-            August 3,2017
-        </div>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <br/>
+            <h3>
+                Article two
+            </h3>
+            <div>
+                August 3,2017
+            </div>
+            </div>
      </body>
  </html>
