--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,9 @@
             <h1>welcome to new Web app</h1>
             
         </div>
+        <script>
+            alert('Hi,I\'m javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
