[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,7 @@
             Home
             Hi! I am mahsh and this is my first webap.
             <h1>welcome to new Web app</h1>
+            hello
             
         </div>
         <script>
