[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
-        <script src="/main.js"></script>
     </head>
     <body>
         <div class="center">
@@ -16,6 +15,9 @@
             hello
             
         </div>
+        <script>
+            alert("Hi I\'m JavaScript");
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
