--- a/ui/index.html
+++ b/ui/index.html
@@ -4,20 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id = "madi" src="https://www.holidify.com/images/compressed/2605.jpg" class="img-medium"/>
-        </div>
-        <br>
-        <div id="main-text" class="center text-big bold">
-            Home
-            Hi! I am mahsh and this is my first webap.
-            <h4>welcome to new Web app</h4>
-            hello
+        <div class = "container">
+            <div class="center">
+                <img id = "madi" src="https://www.holidify.com/images/compressed/2605.jpg" class="img-medium"/>
+            </div>
+            <br/>
+            <br>
+            <h3>Personal</h3>
+            <div>
+                My name is Mahesh
+            </div>
+            
+            <br/>
+             <h3>Professional</h3>
+            <div>
+                I work in  Banglore
+            </div>
             
         </div>
-        <script>
-            alert("Hi I\'m JavaScript");
-        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
