--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,9 @@
             <div>
                 I work in  Banglore
             </div>
-            
+            <div class = "footer">
+                This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
