--- a/ui/index.html
+++ b/ui/index.html
@@ -23,6 +23,16 @@
             <div class = "footer">
                 This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times
             </div>
+            <br>
+            <input type="text" id="name" placeHolder="name"/>
+            <input type="submit" value="submit"/>
+            
+            <ul>
+                <li>name1</li>
+                <li>name2</li>
+                <li>name3</li>
+            </ul>
+            
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
