--- a/ui/index.html
+++ b/ui/index.html
@@ -25,7 +25,7 @@
             </div>
             <hr>
             <input type="text" id="name" placeHolder="name"/>
-            <input type="submit" value="submit"/>
+            <input type="submit" value="submit" id="submit_btn"/>
             
             <ul>
                 <li>name1</li>
