--- a/ui/index.html
+++ b/ui/index.html
@@ -27,11 +27,7 @@
             <input type="text" id="name" placeHolder="name"/>
             <input type="submit" value="submit" id="submit_btn"/>
             
-            <ul>
-                <li>name1</li>
-                <li>name2</li>
-                <li>name3</li>
-            </ul>
+            <ul id="nameList"></ul>
             
         </div>
         <script type="text/javascript" src="/ui/main.js">
