--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class = "container">
+        <div class = "container" align="center">
             <div class="center">
                 <img id = "madi" src="https://www.holidify.com/images/compressed/2605.jpg" class="img-medium"/>
             </div>
@@ -26,6 +26,7 @@
             <div>
                 <input type="text" id="username" placeholder="username"/>
                 <input type="password" id="password"/>
+                <br/>
                 <input type="submit" id="login_btn" value="Login"/>
                 <input type="submit" id="register_btn" value="Register"/>
             </div>
