--- a/ui/index.html
+++ b/ui/index.html
@@ -10,14 +10,9 @@
             </div>
             <br/>
             <br>
-            <h3>Personal</h3>
+            <h3>About Me</h3>
             <div>
                 My name is Mahesh
-            </div>
-            
-            <hr>
-             <h3>Professional</h3>
-            <div>
                 I work in  Banglore
             </div>
             
