[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,8 @@
             <br>
             <h3>About Me</h3>
             <div>
-                My name is Mahesh<br/>
+                My name is Mahesh
+                <br/>
                 I work in  Banglore
             </div>
             
