--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class = "container" align="center">
+        <div class = "container">
             <div class="center">
                 <img id = "madi" src="https://www.holidify.com/images/compressed/2605.jpg" class="img-medium"/>
             </div>
