[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,11 +20,13 @@
              <hr>
              <h3>Login/Register to unlock awesome features</h3>
             <div>
-                <input type="text" id="username" placeholder="username"/>
-                <input type="password" id="password"/>
+               <div>
+                    <input type="text" id="username" placeholder="username"/>
+                    <input type="password" id="password"/>
+                </div>
                 <br/>
-                <input type="submit" id="login_btn" value="Login"/>
-                <input type="submit" id="register_btn" value="Register"/>
+                    <input type="submit" id="login_btn" value="Login"/>
+                    <input type="submit" id="register_btn" value="Register"/>
             </div>
             
             <hr>
