--- a/ui/index.html
+++ b/ui/index.html
@@ -25,8 +25,10 @@
                     <input type="password" id="password"/>
                 </div>
                 <br/>
+                <div>
                     <input type="submit" id="login_btn" value="Login"/>
                     <input type="submit" id="register_btn" value="Register"/>
+                </div>
             </div>
             
             <hr>
