[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -36,6 +36,7 @@
             <ul id="articleList">
                 
             </ul>
+            <p id="hai"></p>
             <div class = "footer">
           </div>
         </div>
