--- a/ui/index.html
+++ b/ui/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <br/>
                 <div>
-                    <input type="submit" id="login_btn" value="Login"/>
+                    <input onclick="change()" type="submit" id="login_btn" value="Login"/>
                     <input type="submit" id="register_btn" value="Register"/>
                 </div>
             </div>
