[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -34,7 +34,7 @@
             <hr>
             <h3>My Articles</h3>
             <ul id="articleList">
-                <li>Article One(<input type="date">)</li>
+                <li>Article One<input type="date"></li>
                 <li>Article Two(<input type="date">)</li>
             </ul>
           
