--- a/ui/index.html
+++ b/ui/index.html
@@ -34,8 +34,8 @@
             <hr>
             <h3>My Articles</h3>
             <ul id="articleList">
-                <li>Article One<input type="date"></li>
-                <li>Article Two(<input type="date">)</li>
+                <li>Article One</li>
+                <li>Article Two</li>
             </ul>
           
             <div class = "footer">
