[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -34,7 +34,7 @@
             <hr>
             <h3>My Articles</h3>
             <ul id="articleList">
-                <li><a href="logout.html">Article One</a></li>
+                <li><a href="/logout">Article One</a></li>
                 <li>Article Two</li>
             </ul>
           
