[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -34,8 +34,8 @@
             <hr>
             <h3>My Articles</h3>
             <ul id="articleList">
-                <li style="text-decoration:none"><a href="/articles/article-one">Article One</a></li>
-                <li style="text-decoration:none"><a href="/articles/article-two">Article Two</a></li>
+                <li style="text-decoration:none;"><a href="/articles/article-one">Article One</a></li>
+                <li style="text-decoration:none;"><a href="/articles/article-two">Article Two</a></li>
             </ul>
           
             <div class = "footer">
