[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -33,9 +33,9 @@
             
             <hr>
             <h3>My Articles</h3>
-            <ul id="articleList">
-                <li style="text-decoration:none;"><a href="/articles/article-one">Article One</a></li>
-                <li style="text-decoration:none;"><a href="/articles/article-two">Article Two</a></li>
+            <ul id="articleList" style="text-decoration:none">
+                <li><a href="/articles/article-one">Article One</a></li>
+                <li ><a href="/articles/article-two">Article Two</a></li>
             </ul>
           
             <div class = "footer">
